[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ice_servers_rest_api"
version = "1.0.0"
authors = [
  { name="p4irin", email="139928764+p4irin@users.noreply.github.com" },
]
description = "A REST API to retrieve ICE servers, i.e. STUN and TURN servers, for use in WebRTC clients."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8.10"
keywords = ["turn", "stun", "ice", "nat", "api", "webrtc"]
dependencies = [
  "flask >= 3.0.0",
  "turn-ephemeral-credentials >= 1.0.1",
  "flask-httpauth >= 4.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Communications :: Internet Phone",    
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
  "build == 0.10.0",
  "twine >= 4.0.2",
  "bumpver >= 2023.1126",
  "httpie >= 3.2.2",
]
test = [
]
prod = [
    "gunicorn >= 21.2.0",
]

[project.urls]
"Homepage" = "https://github.com/p4irin/ice_servers_rest_api"
"Bug Tracker" = "https://github.com/p4irin/ice_servers_rest_api/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"',
  'version = "{version}"',
]
"src/ice_servers_rest_api/__init__.py" = [
  "^__version__ = '{version}'$",
]
"README.md" = [
  " - v{version}$",
]

